WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12746
REGRESSION (
r13853
): List item's first line overflows containing div
https://bugs.webkit.org/show_bug.cgi?id=12746
Summary
REGRESSION (r13853): List item's first line overflows containing div
mitz
Reported
2007-02-12 11:34:07 PST
See the attached test case. The first line of the list item doesn't break in the right place and overflows the div.
Attachments
Test case
(117 bytes, text/html)
2007-02-12 11:34 PST
,
mitz
no flags
Details
Patch, including change log and layout test
(33.39 KB, patch)
2007-02-12 12:34 PST
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-02-12 11:34:53 PST
Created
attachment 13135
[details]
Test case
mitz
Comment 2
2007-02-12 12:34:28 PST
Created
attachment 13138
[details]
Patch, including change log and layout test No layout test regressions.
Dave Hyatt
Comment 3
2007-02-12 15:28:31 PST
Comment on
attachment 13138
[details]
Patch, including change log and layout test r=me
Mark Rowe (bdash)
Comment 4
2007-02-12 21:08:16 PST
<
rdar://problem/4993465
>
mitz
Comment 5
2007-02-13 05:23:15 PST
r19601
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug