LayoutTests:

Reviewed by Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12746
        REGRESSION (r13853): List item's first line overflows containing div

        * fast/lists/item-not-in-list-line-wrapping-expected.checksum: Added.
        * fast/lists/item-not-in-list-line-wrapping-expected.png: Added.
        * fast/lists/item-not-in-list-line-wrapping-expected.txt: Added.
        * fast/lists/item-not-in-list-line-wrapping.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12746
        REGRESSION (r13853): List item's first line overflows containing div

        Test: fast/lists/item-not-in-list-line-wrapping.html

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::findNextLineBreak): Use the list marker's isInside()
        instead of looking at its style()->listStylePosition(), since if the
        list item is not in a list, the marker is inside regardless of the style.



git-svn-id: svn://svn.chromium.org/blink/trunk@19601 bbb929c8-8fbe-4397-9dbb-9b2b20218538